--- a/spider/scrapy.cfg
+++ b/spider/scrapy.cfg
@@ -6,6 +6,6 @@
 [settings]
 default = spider.settings
 
-[deploy]
-#url = http://localhost:6800/
+[deploy:taobao]
+url = http://localhost:6800/
 project = spider
