--- a/spider/scrapy.cfg
+++ b/spider/scrapy.cfg
@@ -9,3 +9,8 @@ default = spider.settings
 [deploy:taobao]
 url = http://localhost:6800/
 project = spider
+
+[deploy:JD]
+url = http://localhost:6800/
+project = JD
+
